testcli/antlrgen/ClientParser.py
# Generated from C:/Work/testcli/testcli/antlr\ClientParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ClientParser ( Parser ):

    grammarFileName = "ClientParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "<INVALID>", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "'\"'", "'''", "'\\'", "<INVALID>", "'EXIT'", 
                     "'QUIT'", "'USE'", "'API'", "'SQL'", "'CONNECT'", "'DISCONNECT'", 
                     "'SESSION'", "'SAVE'", "'RELEASE'", "'RESTORE'", "'SAVECONFIG'", 
                     "'SHOW'", "'START'", "'LOADMAP'", "'WHENEVER_ERROR'", 
                     "'CONTINUE'", "'SPOOL'", "'BEGIN'", "'END'", "'__INTERNAL__'", 
                     "'SET'", "'LOOP'", "'UNTIL'", "'INTERVAL'", "'ASSERT'", 
                     "'SLEEP'", "'LOADDRIVER'", "<INVALID>", "<INVALID>", 
                     "'> {%'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'CREATE'", "'INSERT'", "'UPDATE'", "'SELECT'", "'DELETE'", 
                     "'REPLACE'", "'DECLARE'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'?'", "'#'", "'|'", "'//'", 
                     "'='", "'&'", "'JDBC'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'HINT'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'###'" ]

    symbolicNames = [ "<INVALID>", "CRLF", "COMMA", "SEMICOLON", "COLON", 
                      "AT", "DOT", "SLASH", "BRACKET_OPEN", "BRACKET_CLOSE", 
                      "SQUARE_OPEN", "SQUARE_CLOSE", "DOUBLE_QUOTE", "SINGLE_QUOTE", 
                      "ESCAPE", "SPACE", "EXIT", "QUIT", "USE", "API", "SQL", 
                      "CONNECT", "DISCONNECT", "SESSION", "SAVE", "RELEASE", 
                      "RESTORE", "SAVECONFIG", "SHOW", "START", "LOADMAP", 
                      "WHENEVER_ERROR", "CONTINUE", "SPOOL", "BEGIN", "END", 
                      "INTERNAL", "SET", "LOOP", "UNTIL", "INTERVAL", "ASSERT", 
                      "SLEEP", "LOADDRIVER", "ECHO_OPEN", "HTTP_OPEN", "SCRIPT_OPEN", 
                      "COMMENT_OPEN", "MINUS_MINUS_HINT", "MINUS_MINUS_COMMENT", 
                      "HASH_COMMENT", "SQL_CREATE", "SQL_INSERT", "SQL_UPDATE", 
                      "SQL_SELECT", "SQL_DELETE", "SQL_REPLACE", "SQL_DECLARE", 
                      "SQL_CREATE_PROCEDURE", "INT", "DECIMAL", "String", 
                      "CONNECT_SPACE", "CONNECT_AT", "CONNECT_SLASH", "CONNECT_COLON", 
                      "CONNECT_QUESTION", "CONNECT_POUND", "CONNECT_OR", 
                      "CONNECT_DASH", "CONNECT_EQUAL", "CONNECT_PARA_AND", 
                      "JDBC", "IPV4", "CONNECT_PORT", "CONNECT_STRING", 
                      "ScriptBlock", "EchoBlock", "CommentString", "HINT_SP", 
                      "HINT", "HINT_CLOSE", "HINT_STRING", "DIVIDE", "SP", 
                      "HttpMethod", "HTTP_CLOSE", "HttpHint", "HttpComment", 
                      "HttpRequestTarget", "HttpFieldName", "FIELD_COLON", 
                      "FIELD_CRLF", "HttpFieldValue", "HttpFieldValueEnd", 
                      "HttpMultipartBoundaryEnd", "HttpMultipartBoundary", 
                      "HttpMessageBodyHint", "HttpMessageBodyComment", "HttpMessageBodyOperate", 
                      "SQL_CRLF", "SQL_SPACE", "SQL_END", "SQL_STRING", 
                      "SQL_SINGLE", "SQL_OTHER", "SQL_PROCEDURE_CRLF", "SQL_SLASH", 
                      "SQL_PROCEDURE_SLASH", "SQLProcedureStatement" ]

    RULE_prog = 0
    RULE_commands = 1
    RULE_command = 2
    RULE_exit = 3
    RULE_quit = 4
    RULE_use = 5
    RULE_sleep = 6
    RULE_connect = 7
    RULE_connectlocal = 8
    RULE_connectjdbc = 9
    RULE_connectUserInfo = 10
    RULE_connectDriver = 11
    RULE_connectDriverSchema = 12
    RULE_connectDriverType = 13
    RULE_connectHost = 14
    RULE_connectUser = 15
    RULE_connectPassword = 16
    RULE_connectPort = 17
    RULE_connectService = 18
    RULE_connectlocalService = 19
    RULE_connectParameterName = 20
    RULE_connectParameterValue = 21
    RULE_connectParameter = 22
    RULE_connectParameters = 23
    RULE_disconnect = 24
    RULE_session = 25
    RULE_singleExpression = 26
    RULE_expression = 27
    RULE_start = 28
    RULE_loadmap = 29
    RULE_wheneverError = 30
    RULE_spool = 31
    RULE_echo = 32
    RULE_loadDriver = 33
    RULE_internal = 34
    RULE_set = 35
    RULE_script = 36
    RULE_http = 37
    RULE_httpMessage = 38
    RULE_httpRequestLine = 39
    RULE_httpMethod = 40
    RULE_httpRequestTarget = 41
    RULE_httpHeaderFields = 42
    RULE_httpHeaderField = 43
    RULE_httpFieldName = 44
    RULE_httpFieldValue = 45
    RULE_httpMessageBody = 46
    RULE_httpMultipart = 47
    RULE_httpMultipartBoundary = 48
    RULE_httpBoundaryDelimiter = 49
    RULE_httpMessageBodyContent = 50
    RULE_httpMessageBodyOperate = 51
    RULE_httpMessageBodyOther = 52
    RULE_loopUntil = 53
    RULE_loop = 54
    RULE_loopPair = 55
    RULE_assert = 56
    RULE_sql = 57
    RULE_sqlCreate = 58
    RULE_sqlReplace = 59
    RULE_sqlInsert = 60
    RULE_sqlUpdate = 61
    RULE_sqlDelete = 62
    RULE_sqlSelect = 63
    RULE_sqlDeclare = 64
    RULE_sqlCreateProcedure = 65
    RULE_sqlUnknown = 66

    ruleNames =  [ "prog", "commands", "command", "exit", "quit", "use", 
                   "sleep", "connect", "connectlocal", "connectjdbc", "connectUserInfo", 
                   "connectDriver", "connectDriverSchema", "connectDriverType", 
                   "connectHost", "connectUser", "connectPassword", "connectPort", 
                   "connectService", "connectlocalService", "connectParameterName", 
                   "connectParameterValue", "connectParameter", "connectParameters", 
                   "disconnect", "session", "singleExpression", "expression", 
                   "start", "loadmap", "wheneverError", "spool", "echo", 
                   "loadDriver", "internal", "set", "script", "http", "httpMessage", 
                   "httpRequestLine", "httpMethod", "httpRequestTarget", 
                   "httpHeaderFields", "httpHeaderField", "httpFieldName", 
                   "httpFieldValue", "httpMessageBody", "httpMultipart", 
                   "httpMultipartBoundary", "httpBoundaryDelimiter", "httpMessageBodyContent", 
                   "httpMessageBodyOperate", "httpMessageBodyOther", "loopUntil", 
                   "loop", "loopPair", "assert", "sql", "sqlCreate", "sqlReplace", 
                   "sqlInsert", "sqlUpdate", "sqlDelete", "sqlSelect", "sqlDeclare", 
                   "sqlCreateProcedure", "sqlUnknown" ]

    EOF = Token.EOF
    CRLF=1
    COMMA=2
    SEMICOLON=3
    COLON=4
    AT=5
    DOT=6
    SLASH=7
    BRACKET_OPEN=8
    BRACKET_CLOSE=9
    SQUARE_OPEN=10
    SQUARE_CLOSE=11
    DOUBLE_QUOTE=12
    SINGLE_QUOTE=13
    ESCAPE=14
    SPACE=15
    EXIT=16
    QUIT=17
    USE=18
    API=19
    SQL=20
    CONNECT=21
    DISCONNECT=22
    SESSION=23
    SAVE=24
    RELEASE=25
    RESTORE=26
    SAVECONFIG=27
    SHOW=28
    START=29
    LOADMAP=30
    WHENEVER_ERROR=31
    CONTINUE=32
    SPOOL=33
    BEGIN=34
    END=35
    INTERNAL=36
    SET=37
    LOOP=38
    UNTIL=39
    INTERVAL=40
    ASSERT=41
    SLEEP=42
    LOADDRIVER=43
    ECHO_OPEN=44
    HTTP_OPEN=45
    SCRIPT_OPEN=46
    COMMENT_OPEN=47
    MINUS_MINUS_HINT=48
    MINUS_MINUS_COMMENT=49
    HASH_COMMENT=50
    SQL_CREATE=51
    SQL_INSERT=52
    SQL_UPDATE=53
    SQL_SELECT=54
    SQL_DELETE=55
    SQL_REPLACE=56
    SQL_DECLARE=57
    SQL_CREATE_PROCEDURE=58
    INT=59
    DECIMAL=60
    String=61
    CONNECT_SPACE=62
    CONNECT_AT=63
    CONNECT_SLASH=64
    CONNECT_COLON=65
    CONNECT_QUESTION=66
    CONNECT_POUND=67
    CONNECT_OR=68
    CONNECT_DASH=69
    CONNECT_EQUAL=70
    CONNECT_PARA_AND=71
    JDBC=72
    IPV4=73
    CONNECT_PORT=74
    CONNECT_STRING=75
    ScriptBlock=76
    EchoBlock=77
    CommentString=78
    HINT_SP=79
    HINT=80
    HINT_CLOSE=81
    HINT_STRING=82
    DIVIDE=83
    SP=84
    HttpMethod=85
    HTTP_CLOSE=86
    HttpHint=87
    HttpComment=88
    HttpRequestTarget=89
    HttpFieldName=90
    FIELD_COLON=91
    FIELD_CRLF=92
    HttpFieldValue=93
    HttpFieldValueEnd=94
    HttpMultipartBoundaryEnd=95
    HttpMultipartBoundary=96
    HttpMessageBodyHint=97
    HttpMessageBodyComment=98
    HttpMessageBodyOperate=99
    SQL_CRLF=100
    SQL_SPACE=101
    SQL_END=102
    SQL_STRING=103
    SQL_SINGLE=104
    SQL_OTHER=105
    SQL_PROCEDURE_CRLF=106
    SQL_SLASH=107
    SQL_PROCEDURE_SLASH=108
    SQLProcedureStatement=109

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commands(self):
            return self.getTypedRuleContext(ClientParser.CommandsContext,0)


        def EOF(self):
            return self.getToken(ClientParser.EOF, 0)

        def getRuleIndex(self):
            return ClientParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ClientParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.commands()
            self.state = 135
            self.match(ClientParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClientParser.CommandContext)
            else:
                return self.getTypedRuleContext(ClientParser.CommandContext,i)


        def getRuleIndex(self):
            return ClientParser.RULE_commands

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommands" ):
                return visitor.visitCommands(self)
            else:
                return visitor.visitChildren(self)




    def commands(self):

        localctx = ClientParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_commands)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 137
                self.command()
                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ClientParser.CRLF) | (1 << ClientParser.COMMA) | (1 << ClientParser.SEMICOLON) | (1 << ClientParser.COLON) | (1 << ClientParser.DOT) | (1 << ClientParser.SLASH) | (1 << ClientParser.BRACKET_OPEN) | (1 << ClientParser.BRACKET_CLOSE) | (1 << ClientParser.SQUARE_OPEN) | (1 << ClientParser.SQUARE_CLOSE) | (1 << ClientParser.DOUBLE_QUOTE) | (1 << ClientParser.SINGLE_QUOTE) | (1 << ClientParser.SPACE) | (1 << ClientParser.EXIT) | (1 << ClientParser.QUIT) | (1 << ClientParser.USE) | (1 << ClientParser.CONNECT) | (1 << ClientParser.DISCONNECT) | (1 << ClientParser.SESSION) | (1 << ClientParser.START) | (1 << ClientParser.LOADMAP) | (1 << ClientParser.WHENEVER_ERROR) | (1 << ClientParser.SPOOL) | (1 << ClientParser.INTERNAL) | (1 << ClientParser.SET) | (1 << ClientParser.LOOP) | (1 << ClientParser.ASSERT) | (1 << ClientParser.SLEEP) | (1 << ClientParser.LOADDRIVER) | (1 << ClientParser.ECHO_OPEN) | (1 << ClientParser.HTTP_OPEN) | (1 << ClientParser.SCRIPT_OPEN) | (1 << ClientParser.SQL_CREATE) | (1 << ClientParser.SQL_INSERT) | (1 << ClientParser.SQL_UPDATE) | (1 << ClientParser.SQL_SELECT) | (1 << ClientParser.SQL_DELETE) | (1 << ClientParser.SQL_REPLACE) | (1 << ClientParser.SQL_DECLARE) | (1 << ClientParser.SQL_CREATE_PROCEDURE) | (1 << ClientParser.INT) | (1 << ClientParser.DECIMAL) | (1 << ClientParser.String))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exit(self):
            return self.getTypedRuleContext(ClientParser.ExitContext,0)


        def quit(self):
            return self.getTypedRuleContext(ClientParser.QuitContext,0)


        def use(self):
            return self.getTypedRuleContext(ClientParser.UseContext,0)


        def sleep(self):
            return self.getTypedRuleContext(ClientParser.SleepContext,0)


        def connect(self):
            return self.getTypedRuleContext(ClientParser.ConnectContext,0)


        def disconnect(self):
            return self.getTypedRuleContext(ClientParser.DisconnectContext,0)


        def session(self):
            return self.getTypedRuleContext(ClientParser.SessionContext,0)


        def start(self):
            return self.getTypedRuleContext(ClientParser.StartContext,0)


        def loadmap(self):
            return self.getTypedRuleContext(ClientParser.LoadmapContext,0)


        def wheneverError(self):
            return self.getTypedRuleContext(ClientParser.WheneverErrorContext,0)


        def spool(self):
            return self.getTypedRuleContext(ClientParser.SpoolContext,0)


        def loadDriver(self):
            return self.getTypedRuleContext(ClientParser.LoadDriverContext,0)


        def set_(self):
            return self.getTypedRuleContext(ClientParser.SetContext,0)


        def internal(self):
            return self.getTypedRuleContext(ClientParser.InternalContext,0)


        def script(self):
            return self.getTypedRuleContext(ClientParser.ScriptContext,0)


        def http(self):
            return self.getTypedRuleContext(ClientParser.HttpContext,0)


        def loop(self):
            return self.getTypedRuleContext(ClientParser.LoopContext,0)


        def echo(self):
            return self.getTypedRuleContext(ClientParser.EchoContext,0)


        def loopUntil(self):
            return self.getTypedRuleContext(ClientParser.LoopUntilContext,0)


        def assert_(self):
            return self.getTypedRuleContext(ClientParser.AssertContext,0)


        def sql(self):
            return self.getTypedRuleContext(ClientParser.SqlContext,0)


        def getRuleIndex(self):
            return ClientParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = ClientParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.exit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.quit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.use()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.sleep()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.connect()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.disconnect()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 148
                self.session()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 149
                self.start()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 150
                self.loadmap()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 151
                self.wheneverError()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 152
                self.spool()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 153
                self.loadDriver()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 154
                self.set_()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 155
                self.internal()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 156
                self.script()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 157
                self.http()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 158
                self.loop()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 159
                self.echo()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 160
                self.loopUntil()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 161
                self.assert_()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 162
                self.sql()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXIT(self):
            return self.getToken(ClientParser.EXIT, 0)

        def INT(self):
            return self.getToken(ClientParser.INT, 0)

        def CRLF(self):
            return self.getToken(ClientParser.CRLF, 0)

        def getRuleIndex(self):
            return ClientParser.RULE_exit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExit" ):
                return visitor.visitExit(self)
            else:
                return visitor.visitChildren(self)




    def exit(self):

        localctx = ClientParser.ExitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(ClientParser.EXIT)
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 166
                self.match(ClientParser.INT)


            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 169
                self.match(ClientParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUIT(self):
            return self.getToken(ClientParser.QUIT, 0)

        def INT(self):
            return self.getToken(ClientParser.INT, 0)

        def CRLF(self):
            return self.getToken(ClientParser.CRLF, 0)

        def getRuleIndex(self):
            return ClientParser.RULE_quit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuit" ):
                return visitor.visitQuit(self)
            else:
                return visitor.visitChildren(self)




    def quit(self):

        localctx = ClientParser.QuitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_quit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(ClientParser.QUIT)
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 173
                self.match(ClientParser.INT)


            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 176
                self.match(ClientParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(ClientParser.USE, 0)

        def API(self):
            return self.getToken(ClientParser.API, 0)

        def SQL(self):
            return self.getToken(ClientParser.SQL, 0)

        def CRLF(self):
            return self.getToken(ClientParser.CRLF, 0)

        def getRuleIndex(self):
            return ClientParser.RULE_use

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUse" ):
                return visitor.visitUse(self)
            else:
                return visitor.visitChildren(self)




    def use(self):

        localctx = ClientParser.UseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_use)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(ClientParser.USE)
            self.state = 180
            _la = self._input.LA(1)
            if not(_la==ClientParser.API or _la==ClientParser.SQL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 181
                self.match(ClientParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SleepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLEEP(self):
            return self.getToken(ClientParser.SLEEP, 0)

        def INT(self):
            return self.getToken(ClientParser.INT, 0)

        def DECIMAL(self):
            return self.getToken(ClientParser.DECIMAL, 0)

        def CRLF(self):
            return self.getToken(ClientParser.CRLF, 0)

        def getRuleIndex(self):
            return ClientParser.RULE_sleep

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSleep" ):
                return visitor.visitSleep(self)
            else:
                return visitor.visitChildren(self)




    def sleep(self):

        localctx = ClientParser.SleepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sleep)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(ClientParser.SLEEP)
            self.state = 185
            _la = self._input.LA(1)
            if not(_la==ClientParser.INT or _la==ClientParser.DECIMAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 186
                self.match(ClientParser.CRLF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectContext(ParserRuleContext):
        __slots__ = 'parser'
